tests/fails/f17.t

terra foo()
    return true + 1 
end
foo()